--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "git@github.com:kumarabhinav75/shell-app.git",
   "author": "abhinavkumar75 <abhinav.kumar@cleartax.in>",
   "license": "MIT",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "scripts": {
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
@@ -17,8 +17,11 @@
     "css-loader": "^6.9.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
